# camt-processing

./: .gitignore  AGENTS.md  GENERIC_PRIMITIVES.md  README.md  VISION_CONFIGURABLE_PARSERS.md  docker-compose.yml  electron.vite.config.ts  package-lock.json  package.json  preload.vite.config.ts  renderer.vite.config.ts  tsconfig.json  vitest.config.ts
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_booking_entries_table.py  0001_create_items_table.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/crud/: booking_entry.py  item.py
backend/app/db/: session.py
backend/app/models/: __init__.py  booking_entry.py  item.py
backend/app/schemas/: booking.py  item.py
backend/app/services/: camt_parser.py  text_normalizer.py
excel/: template.xlsx
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.css
src/main/: index.ts
src/preload/: index.ts
src/renderer/: App.css  App.tsx  index.html  preload.d.ts
src/shared/: ipc-contract.ts  types.ts
v2/: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  preload.vite.config.ts  renderer.vite.config.ts  tsconfig.json  vitest.config.ts
v2/config/: classes.yaml  export.yaml  extraction.yaml  matrices.yaml  pipeline.yaml  registries.yaml  tables.yaml  validation.yaml
v2/tests/: classifier.test.ts  config-saver.test.ts  cross-ref.test.ts  diagnostics.test.ts  e2e-camt.test.ts  e2e-production.test.ts  (+7 more)
(+61 files in other folders)
